tui/tests/snapshots/snapshot_tests__status_bar_connecting.snap
---
source: tests/snapshot_tests.rs
expression: "render_to_string(&mut app, 80, 24)"
---
TestBackend { buffer: Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        " Flutter  │  Agent  │  Interactions  │  Tree                     ⠷ Connecting   ",
        "┌ Flutter [1/0] ───────────────────────────────────────────────────────────────┐",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│               ┌ Select Session ──────────────────────────────┐               │",
        "│               │No sessions available                         │               │",
        "│               │                                              │               │",
        "│               │                                              │               │",
        "│               │                                              │               │",
        "│               │                                              │               │",
        "│               │                                              │               │",
        "│               │                                              │               │",
        "│               │                                              │               │",
        "│               │                                              │               │",
        "│               │                                              │               │",
        "│               └──────────────────────────────────────────────┘               │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
        "↑↓/jk:select Enter:connect c:create d:delete Esc:close                          ",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 8, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 65, y: 0, fg: Yellow, bg: Reset, underline: Reset, modifier: NONE,
        x: 66, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 67, y: 0, fg: Yellow, bg: Reset, underline: Reset, modifier: ITALIC,
        x: 77, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 2, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 3, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 4, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 5, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 6, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 6, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 7, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 7, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 7, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 8, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 8, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 8, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 8, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 9, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 9, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 9, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 9, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 10, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 10, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 10, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 10, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 11, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 11, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 11, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 11, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 12, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 12, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 12, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 12, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 13, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 13, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 13, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 14, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 14, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 14, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 15, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 15, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 15, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 16, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 17, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 16, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 16, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 16, y: 17, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 64, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 17, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 18, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 19, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 20, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 1, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 79, y: 21, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 5, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 12, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 13, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 18, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 28, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 35, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 36, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 37, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 44, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 45, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 48, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 54, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}, scrollback: Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 0 }
}, cursor: false, pos: (0, 0) }
