tui/tests/snapshots/snapshot_tests__tree_tab_no_tree.snap
---
source: tests/snapshot_tests.rs
expression: "render_to_string(&mut app, 80, 24)"
---
TestBackend { buffer: Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        " Flutter  │  Agent  │  Interactions  │  Treetest_app │ @app-one │ pid 12345     ",
        "┌ Interaction Tree ────────────────────────────────────────────────────────────┐",
        "│No tree data (app not running?)                                               │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "│                                                                              │",
        "└──────────────────────────────────────────────────────────────────────────────┘",
        "hl:tabs ↑↓/jk:navigate /:filter s:sessions ←→:expand/collapse Enter:toggle e/E:e",
    ],
    styles: [
        x: 0, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 40, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: BOLD,
        x: 44, y: 0, fg: Blue, bg: Reset, underline: Reset, modifier: NONE,
        x: 52, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 55, y: 0, fg: Magenta, bg: Reset, underline: Reset, modifier: NONE,
        x: 63, y: 0, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 66, y: 0, fg: Green, bg: Reset, underline: Reset, modifier: NONE,
        x: 75, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 1, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 0, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 2, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 7, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 13, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 22, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 24, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 31, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 32, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 33, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 42, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 43, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 45, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 61, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 62, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 67, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
        x: 74, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 75, y: 23, fg: Yellow, bg: Reset, underline: Reset, modifier: BOLD,
        x: 78, y: 23, fg: DarkGray, bg: Reset, underline: Reset, modifier: NONE,
    ]
}, scrollback: Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 0 }
}, cursor: false, pos: (0, 0) }
